# - an entry should not explain why a change was made, but rather what the change was
#   (the explanation of why belongs in the source code itself)
#
# http://www.cybop.net
# - Cybernetics Oriented Programming -
#
# @version $RCSfile: ChangeLog,v $ $Revision: 1.147 $ $Date: 2009-10-06 21:25:26 $ $Author: christian $
# @author Christian Heller <christian.heller@tuxtax.de>
#

2011-05-01  Christian Heller  <christian.heller@tuxtax.de>

        * Continue new files and delete old ones in "executor/comparator/"

2011-04-29  Christian Heller  <christian.heller@tuxtax.de>

        * Continue new files in "executor/comparator/"

2011-04-28  Christian Heller  <christian.heller@tuxtax.de>

        * Add udp socket presentation created by students to "tmp" directory
        * Add "time_output" cybol example applications created by students

2011-04-26  Christian Heller  <christian.heller@tuxtax.de>

        * Continue new files in "executor/comparator/"

2011-04-21  Christian Heller  <christian.heller@tuxtax.de>

        * Add files "item_comparator.c" and "model_comparator.c"

2011-04-19  Christian Heller  <christian.heller@tuxtax.de>

        * Correct new "shell_output" cybol example applications for "sequence", "branch" and "loop"

2011-04-18  Christian Heller  <christian.heller@tuxtax.de>

        * Add "sequence" control flow operation in parallel to "loop" and "branch"
        * Fix shell output error in "file_sender.c" (when sending byte streams to "stdout",
            the output has to be done in "wchar_t" anyway, since "stdout" was configured
            for wide characters at cyboi startup; therefore, use fwprintf in this case)
        * Add new "shell_output" cybol example applications for "sequence", "branch" and "loop"

2011-04-16  Christian Heller  <christian.heller@tuxtax.de>

        * Continue new container functions "setter"

2011-04-15  Christian Heller  <christian.heller@tuxtax.de>

        * Continue new container functions