@@ -31,11 +31,10 @@
 #include "../../constant/abstraction/memory/primitive_memory_abstraction.c"
 #include "../../constant/model/log/message_log_model.c"
 #include "../../constant/model/memory/integer_memory_model.c"
-#include "../../constant/model/memory/pointer_memory_model.c"
+#include "../../executor/arithmetiser/integer_adder.c"
 #include "../../executor/arithmetiser/integer_multiplier.c"
 #include "../../executor/comparator/value_comparator.c"
 #include "../../executor/memoriser/size_determiner.c"
-#include "../../executor/referencer/setter/value_setter.c"
 #include "../../logger/logger.c"
 
 /**
